local dev branch init, update to spring boot 4, service per schema separation. TODO: Integration Tests